# stllabs

./: .gitignore  LICENSE
lab1/lab1/: main.cpp
lab1/lab1.xcodeproj/: project.pbxproj
lab2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lab2/lab2/: File.txt  Tokenizer.cpp  Tokenizer.h  main.cpp
lab2/lab2.build/Debug/ALL_BUILD.build/: Script-2D8B3A4AB46E4ABB86CA76D9.sh  dgph
lab2/lab2.build/Debug/ZERO_CHECK.build/: Script-759B756BEF264A84852E4D08.sh  dgph
lab2/lab2.build/Debug/main.build/: dgph
lab2/lab2.build/Debug/main.build/Objects-normal/x86_64/: main.LinkFileList
lab2/lab2.build/Release/ZERO_CHECK.build/: dgph
lab2/lab2.xcodeproj/: project.pbxproj
lab2/src/: Token.h  Tokenizer.cpp  Tokenizer.h  main.cpp
lab3/lab3/: QueueWithPriority.cpp  QueueWithPriority.hpp  main.cpp
lab3/lab3.xcodeproj/: project.pbxproj
lab3/lab6/lab6/: main.cpp
lab3/lab6/lab6.xcodeproj/: project.pbxproj
lab4/lab4/: PhoneBook.cpp  PhoneBook.hpp  main.cpp
lab4/lab4.xcodeproj/: project.pbxproj
lab5/lab5/: main.cpp
lab5/lab5.xcodeproj/: project.pbxproj
lab6/lab6/: Tokenizer.cpp  Tokenizer.h  main.cpp
lab6/lab6.xcodeproj/: project.pbxproj
lab6_1/lab6/: File.txt  Task.txt
lab6_2/lab6_2/: main.cpp
lab6_2/lab6_2.xcodeproj/: project.pbxproj
lab7/lab7/: main.cpp
lab7/lab7.xcodeproj/: project.pbxproj
