cmake_minimum_required (VERSION 2.6)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_C_COMPILER clang)

project (lab2)

file(GLOB SOURCES src/*.cpp)
set(EXECUTABLE_OUTPUT_PATH "bin")

add_executable(main ${SOURCES})

set(CMAKE_CURRENT_BINARY_DIR bin)
set(CMAKE_CURRENT_SOURCE_DIR src)
#set("${PROJECT}_LIB_DIR" lib)


set (CMAKE_INCLUDE_PATH ${${PROJECT}_SOURCE_DIR})
set (CMAKE_LIBRARY_PATH ${${PROJECT}_LIB_DIR})
#set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/${${PROJECT}_BINARY_DIR})
set (CMAKE_VERBOSE_MAKEFILE ON)
set (CMAKE_BUILD_TYPE Debug)


# For autocompletion
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
